Fix docker compose + formatting

--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
+      target: final
     ports:
       - "8000:8000"
     volumes:
@@ -29,16 +30,20 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
+      target: final
     volumes:
       - .:/app
+    profiles: ["dev"]
     command: sh -c "black . && isort ."
 
   lint:
     build: 
       context: .
       dockerfile: Dockerfile
+      target: final
     volumes:
       - .:/app
+    profiles: ["dev"]
     command: flake8
 
 volumes:
