--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: fastapi_db_test
+          POSTGRES_DB: postgres
         ports:
           - 5432:5432
         options: >-
@@ -49,7 +49,7 @@ jobs:
         
     - name: Run tests
       env:
-        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/fastapi_db_test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/fastapi_db
       run: |
         pytest -v
 
